// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createJobOffer > should create a job offer with the minimal data 1`] = `
{
  "_id": Any<ObjectId>,
  "apply_email": null,
  "apply_phone": null,
  "apply_url": null,
  "contract_duration": null,
  "contract_remote": null,
  "contract_start": 2024-09-01T00:00:00.000Z,
  "contract_type": [
    "Apprentissage",
    "Professionnalisation",
  ],
  "created_at": 2024-06-18T00:00:00.000Z,
  "offer_access_conditions": [],
  "offer_creation": 2024-06-18T00:00:00.000Z,
  "offer_description": "Envie de devenir développeur web ? Rejoignez-nous !",
  "offer_desired_skills": [],
  "offer_expiration": 2024-08-17T22:00:00.000Z,
  "offer_multicast": true,
  "offer_opening_count": 1,
  "offer_origin": null,
  "offer_rome_codes": [
    "M1602",
  ],
  "offer_status": "Active",
  "offer_target_diploma": null,
  "offer_title": "Apprentis en développement web",
  "offer_to_be_acquired_skills": [],
  "partner_job_id": "job-id-b",
  "partner_label": "Some organisation",
  "updated_at": 2024-06-18T00:00:00.000Z,
  "workplace_address_city": "PARIS",
  "workplace_address_zipcode": "75007",
  "workplace_address_label": "20 AVENUE DE SEGUR 75007 PARIS",
  "workplace_address_street_label": "20 AVENUE DE SEGUR",
  "workplace_brand": null,
  "workplace_description": null,
  "workplace_geopoint": {
    "coordinates": [
      2.347,
      48.8589,
    ],
    "type": "Point",
  },
  "workplace_idcc": 1459,
  "workplace_legal_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_naf_code": "84.11Z",
  "workplace_naf_label": "Administration publique générale",
  "workplace_name": null,
  "workplace_opco": "AKTO / Opco entreprises et salariés des services à forte intensité de main d'oeuvre",
  "workplace_siret": "13002526500013",
  "workplace_size": "100 à 199 salariés",
  "workplace_website": null,
}
`;

exports[`findJobsOpportunities > should execute query 1`] = `
[
  {
    "apply_phone": "0300000000",
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": 2021-01-28T15:00:00.000Z,
    "contract_type": [
      "Apprentissage",
    ],
    "offer_access_conditions": [
      "Ce métier est accessible avec un diplôme de fin d'études secondaires (brevet des collèges) à Bac (professionnel, Brevet Professionnel, ...) dans le secteur tertiaire. Il est également accessible avec une expérience professionnelle sans diplôme particulier. La maîtrise de l'outil bureautique (traitement de texte, tableur, ...) peut être requise.",
    ],
    "offer_creation": 2021-01-01T00:00:00.000Z,
    "offer_description": "Exécute des travaux administratifs courants (vérification de documents, frappe et mise en forme de courriers pré-établis, suivi de dossier administratifs, ...) selon l'organisation de la structure ou du service. Peut être en charge d'activités de reprographie et d'archivage. Peut réaliser l'accueil de la structure.",
    "offer_desired_skills": [
      "Faire preuve de rigueur et de précision",
      "Organiser son travail selon les priorités et les objectifs",
      "Être à l'écoute, faire preuve d'empathie",
    ],
    "offer_expiration": 2050-01-01T00:00:00.000Z,
    "offer_opening_count": 1,
    "offer_rome_codes": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_target_diploma": null,
    "offer_title": "Opérations administratives",
    "offer_to_be_acquired_skills": [
      "Production, Fabrication: Procéder à l'enregistrement, au tri, à l'affranchissement du courrier",
      "Production, Fabrication: Réaliser des travaux de reprographie",
      "Gestion des stocks: Contrôler l'état des stocks",
      "Gestion des stocks: Définir des besoins en approvisionnement",
      "Logistique: Organiser le traitement des commandes",
      "Relation client: Accueillir, orienter, informer une personne",
      "Organisation: Contrôler la conformité des données ou des documents",
      "Organisation: Corriger et mettre en forme un document",
      "Organisation: Numériser des documents, médias ou supports techniques",
      "Organisation: Utiliser les outils bureautiques",
      "Organisation: Établir, mettre à jour un dossier, une base de données",
    ],
    "partner_job_id": null,
    "partner_label": "La bonne alternance",
    "workplace_address_city": "Paris",
    "workplace_address_zipcode": null,
    "workplace_address_label": "Paris",
    "workplace_address_street_label": null,
    "workplace_brand": null,
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": "ASSEMBLEE NATIONALE",
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": "ASSEMBLEE NATIONALE",
    "workplace_opco": null,
    "workplace_siret": "11000001500013",
    "workplace_size": null,
    "workplace_website": null,
  },
  {
    "apply_phone": null,
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": null,
    "contract_type": [],
    "offer_access_conditions": [],
    "offer_creation": 2024-01-01T00:00:00.000Z,
    "offer_description": "Attention il te faut une super motivation pour ce job",
    "offer_desired_skills": [],
    "offer_expiration": null,
    "offer_opening_count": 1,
    "offer_rome_codes": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_target_diploma": null,
    "offer_title": "Super offre d'apprentissage",
    "offer_to_be_acquired_skills": [],
    "partner_job_id": "1",
    "partner_label": "France Travail",
    "workplace_address_city": "Paris",
    "workplace_address_zipcode": null,
    "workplace_address_label": "Paris",
    "workplace_address_street_label": null,
    "workplace_brand": null,
    "workplace_description": "",
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": null,
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": "",
    "workplace_opco": null,
    "workplace_siret": null,
    "workplace_size": null,
    "workplace_website": null,
  },
  {
    "apply_email": null,
    "apply_phone": null,
    "contract_duration": null,
    "contract_remote": null,
    "contract_start": null,
    "contract_type": [
      "Apprentissage",
      "Professionnalisation",
    ],
    "created_at": 2021-01-28T15:00:00.000Z,
    "distance": 0,
    "offer_access_conditions": [],
    "offer_creation": 2021-01-01T00:00:00.000Z,
    "offer_description": "Attention il te faut une super motivation pour ce job",
    "offer_desired_skills": [],
    "offer_expiration": null,
    "offer_multicast": true,
    "offer_opening_count": 1,
    "offer_origin": null,
    "offer_rome_codes": [
      "M1602",
    ],
    "offer_status": "Active",
    "offer_target_diploma": null,
    "offer_title": "Une super offre d'alternance",
    "offer_to_be_acquired_skills": [],
    "partner_job_id": "job-id-1",
    "partner_label": "Hello work",
    "updated_at": 2021-01-28T15:00:00.000Z,
    "workplace_address_city": "PARIS",
    "workplace_address_zipcode": "75007",
    "workplace_address_label": "126 RUE DE L'UNIVERSITE 75007 PARIS",
    "workplace_address_street_label": "126 RUE DE L'UNIVERSITE",
    "workplace_brand": null,
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": null,
    "workplace_naf_code": null,
    "workplace_naf_label": null,
    "workplace_name": null,
    "workplace_opco": null,
    "workplace_siret": null,
    "workplace_size": null,
    "workplace_website": null,
  },
]
`;

exports[`findJobsOpportunities > should execute query 2`] = `
[
  {
    "apply_phone": "0100000000",
    "apply_url": "http://localhost:3000/recherche-apprentissage?type=lba&itemId=11000001500013",
    "workplace_address_city": null,
    "workplace_address_zipcode": null,
    "workplace_address_label": null,
    "workplace_address_street_label": null,
    "workplace_brand": "ASSEMBLEE NATIONALE - La vraie",
    "workplace_description": null,
    "workplace_geopoint": {
      "coordinates": [
        2.347,
        48.8589,
      ],
      "type": "Point",
    },
    "workplace_idcc": null,
    "workplace_legal_name": "ASSEMBLEE NATIONALE",
    "workplace_naf_code": "8411Z",
    "workplace_naf_label": "Administration publique générale",
    "workplace_name": "ASSEMBLEE NATIONALE - La vraie",
    "workplace_opco": null,
    "workplace_siret": "11000001500013",
    "workplace_size": null,
    "workplace_website": null,
  },
]
`;

exports[`updateJobOffer > should update a job offer with the minimal data 1`] = `
{
  "_id": Any<ObjectId>,
  "apply_email": null,
  "apply_phone": null,
  "apply_url": null,
  "contract_duration": null,
  "contract_remote": null,
  "contract_start": 2024-09-01T00:00:00.000Z,
  "contract_type": [
    "Apprentissage",
    "Professionnalisation",
  ],
  "created_at": 2023-09-05T22:00:00.000Z,
  "offer_access_conditions": [],
  "offer_creation": 2023-09-05T22:00:00.000Z,
  "offer_description": "Envie de devenir développeur web ? Rejoignez-nous !",
  "offer_desired_skills": [],
  "offer_expiration": 2023-11-05T23:00:00.000Z,
  "offer_multicast": true,
  "offer_opening_count": 1,
  "offer_origin": null,
  "offer_rome_codes": [
    "M1602",
  ],
  "offer_status": "Active",
  "offer_target_diploma": null,
  "offer_title": "Apprentis en développement web",
  "offer_to_be_acquired_skills": [],
  "partner_job_id": "job-id-9",
  "partner_label": "Some organisation",
  "updated_at": 2024-06-18T00:00:00.000Z,
  "workplace_address_city": "PARIS",
  "workplace_address_label": "20 AVENUE DE SEGUR 75007 PARIS",
  "workplace_address_street_label": "20 AVENUE DE SEGUR",
  "workplace_address_zipcode": "75007",
  "workplace_brand": null,
  "workplace_description": null,
  "workplace_geopoint": {
    "coordinates": [
      2.347,
      48.8589,
    ],
    "type": "Point",
  },
  "workplace_idcc": 1459,
  "workplace_legal_name": "DIRECTION INTERMINISTERIELLE DU NUMERIQUE",
  "workplace_naf_code": "84.11Z",
  "workplace_naf_label": "Administration publique générale",
  "workplace_name": null,
  "workplace_opco": "AKTO / Opco entreprises et salariés des services à forte intensité de main d'oeuvre",
  "workplace_siret": "13002526500013",
  "workplace_size": "100 à 199 salariés",
  "workplace_website": null,
}
`;
